# CombBandits

./: .gitignore  DELLA_RUNBOOK.md  EXPERIMENTS.md  README.md  anti_ai_slop_prompt.md  aws_infra_map.md  citation_audit.md  paper_outline.md  pyproject.toml  research_directions_v2.md  research_synthesis.md  reviewer_audit.md  round2_analysis.md  round3_analysis.md  round3_plan.md  round4_analysis.md  sandberg_bound_summary.md  simulated_review.md  theory_draft.md  writing_style_guide.md
arena_results/: arena_20260423_023718.json  arena_20260423_023718_report.txt  arena_20260423_024806.json  arena_20260423_024806_report.txt  arena_20260423_030138.json  arena_20260423_030138_report.txt  arena_20260423_031111.json  arena_20260423_031111_report.txt  arena_20260423_031816.json  arena_20260423_031816_report.txt  arena_20260423_032120.json  arena_20260423_032120_report.txt  arena_20260423_032940.json  arena_20260423_032940_report.txt  arena_20260423_040424.json  arena_20260423_040424_report.txt  heldout_20260423_033051.json  heldout_20260423_033051_report.txt  production_real_llm_20260423_051808.json  production_real_llm_20260423_051808_curves.json  production_real_llm_20260423_051808_report.txt  production_real_llm_20260423_112511.json  production_real_llm_20260423_112511_curves.json  production_real_llm_20260423_112511_report.txt  production_real_llm_20260423_154033.json  production_real_llm_20260423_154033_curves.json  production_real_llm_20260423_154033_report.txt  production_v2_20260423_160429.json  production_v2_20260423_160429_curves.json  real_llm_20260423_034229.json  (+3 more)
(+220 files in other folders)
